--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -15,6 +15,10 @@ VUE_APP_RELEASE_FLODER_PATH = '/console/'
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/43/'
 ## API Base
 VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
+## API Idic
+VUE_APP_API_IDIC = 'https://devdurservice.holoalpha.com/idic/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
