--- a/packages/repo-organization/.env.dev
+++ b/packages/repo-organization/.env.dev
@@ -14,6 +14,10 @@ VUE_APP_RELEASE_FLODER_PATH = '/console/'
 ## API 地址
 ## API Base
 VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
+## API Idic
+VUE_APP_API_IDIC = 'https://devdurservice.holoalpha.com/idic/'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
