feat: ZHYY-3911 & ZHYY-3972
1，重构科室规则
2，重构药品规则

https://jira.yyjzt.com/browse/ZHYY-3911
https://jira.yyjzt.com/browse/ZHYY-3972

--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -31,3 +31,5 @@ VUE_APP_SITE_OFFCIAL = 'http://localhost:8080/'
 VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.holoalpha.com/'
 ## 互联网医院地址
 VUE_APP_SITE_ORGANIZATION = 'http://localhost:8013/'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
