--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -27,3 +27,5 @@ VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 VUE_APP_SITE_OPERATION = 'https://testduroc.holoalpha.com/'
 ## 互医运营端系统地址
 VUE_APP_SITE_NETHOSPITAL = 'https://testzyy.holoalpha.com/backend'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://testdurservice.holoalpha.com/'
