--- a/packages/repo-organization/.env
+++ b/packages/repo-organization/.env
@@ -12,24 +12,24 @@ VUE_APP_RELEASE_FLODER_PATH = '/console/'
 
 ## API 地址
 ## API Mock
-VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/43/'
+VUE_APP_API_MOCK = 'https://testyapi.holoalpha.com/mock/43/'
 ## API Base
-VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
+VUE_APP_API_BASE = 'https://testzyyservice.holoalpha.com/'
 ## 审方引擎
-VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
+VUE_APP_SITE_AUDITENGINE = 'https://testvdurservice.holoalpha.com/'
 ## API Idic
-VUE_APP_API_IDIC = 'https://devdurservice.holoalpha.com/idic/'
+VUE_APP_API_IDIC = 'https://testdurservice.holoalpha.com/idic/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
+VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 
 ## 站点地址 
 ## 官网地址
 VUE_APP_SITE_OFFCIAL = 'http://localhost:8080/'
 ## 处方共享管理、合理用药管理、药品供应管理地址
-VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.holoalpha.com/'
+VUE_APP_SITE_PRESCRIPTION = 'https://testdurhome.holoalpha.com/'
 ## 互联网医院地址
 VUE_APP_SITE_ORGANIZATION = 'http://localhost:8013/'
 ## 审方引擎
-VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
+VUE_APP_SITE_AUDITENGINE = 'https://testdurservice.holoalpha.com/'
