--- a/packages/repo-patient/.env.test
+++ b/packages/repo-patient/.env.test
@@ -13,7 +13,7 @@ VUE_APP_BASE_API = 'https://testpatient.holoalpha.com/'
 VUE_APP_IM_KEY = 'eb959e13893443046d7d1767d540ea14'
 
 ## 神策埋点 server_url
-VUE_APP_SA_SERVER_URL = 'https://track.jk.com/sa.gif?project=zyy_test&remark=cktest'
+VUE_APP_SA_SERVER_URL = 'https://track.test.jk.com/sa.gif?project=zyy_test&remark=cktest'
 
 ## H5访问链接
 VUE_APP_BASE_URL = 'https://testzyy.holoalpha.com/'
