--- a/packages/repo-patient/.env
+++ b/packages/repo-patient/.env
@@ -18,7 +18,7 @@ VUE_APP_MAP_KEY = 'S2WBZ-VHEK5-UCAIE-Q4TPB-LO7P3-DCB54'
 VUE_APP_APPID = 'wxed627bdde3060ade'
 
 ## 神策埋点 server_url
-VUE_APP_SA_SERVER_URL = 'http://10.0.23.24:8000/sa.gif?project=zyy_dev&remark=cktest'
+VUE_APP_SA_SERVER_URL = 'https://track.test.jk.com/sa.gif?project=zyy_dev&remark=cktes'
 
 ## H5访问链接
 VUE_APP_BASE_URL = 'http://localhost:8080/'
