fix:修改预发布env域名缺失

--- a/packages/repo-operation/.env.pre
+++ b/packages/repo-operation/.env.pre
@@ -27,3 +27,5 @@ VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
 VUE_APP_SITE_OPERATION = 'https://preduroc.holoalpha.com/'
 ## 互医运营端系统地址
 VUE_APP_SITE_NETHOSPITAL = 'https://prezyy.holoalpha.com/backend'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://predurservice.holoalpha.com/'
