--- a/packages/repo-operation/.env.prod
+++ b/packages/repo-operation/.env.prod
@@ -27,3 +27,5 @@ VUE_APP_API_WEBSOCKET = 'wss://zyyservice.holoalpha.com/admin/websocket'
 VUE_APP_SITE_OPERATION = 'https://duroc.holoalpha.com/'
 ## 互医运营端系统地址
 VUE_APP_SITE_NETHOSPITAL = 'https://zyy.holoalpha.com/backend'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://durservice.holoalpha.com/'
