--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -41,9 +41,9 @@
     "babel-plugin-transform-imports": "1.5.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.13.0",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize-module": "^3.0.0",
+    "sass": "^1.37.5",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-quasar": "^2.0.1",
     "vue-quill-editor": "^3.0.6",
