--- a/packages/repo-operation/.env.dev
+++ b/packages/repo-operation/.env.dev
@@ -29,3 +29,5 @@ VUE_APP_SITE_OPERATION = 'https://devduroc.holoalpha.com/'
 VUE_APP_SITE_NETHOSPITAL = 'https://devzyy.holoalpha.com/backend'
 ## 审方引擎
 VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
+## 处方共享管理、合理用药管理、药品供应管理地址
+VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.holoalpha.com/'
