--- a/packages/repo-operation/.env.test
+++ b/packages/repo-operation/.env.test
@@ -29,3 +29,5 @@ VUE_APP_SITE_OPERATION = 'https://testduroc.holoalpha.com/'
 VUE_APP_SITE_NETHOSPITAL = 'https://testzyy.holoalpha.com/backend'
 ## 审方引擎
 VUE_APP_SITE_AUDITENGINE = 'https://testdurservice.holoalpha.com/'
+## 处方共享管理、合理用药管理、药品供应管理地址
+VUE_APP_SITE_PRESCRIPTION = 'https://testdurhome.holoalpha.com/'
