--- a/packages/repo-operation/.env
+++ b/packages/repo-operation/.env
@@ -3,7 +3,7 @@
 
 
 ## 编译模式
-NODE_ENV = 'testelopment'
+NODE_ENV = 'development'
 
 
 ## Nginx 虚拟路径
@@ -17,23 +17,23 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 
 ## API 地址
 ## API Mock
-VUE_APP_API_MOCK = 'https://testyapi.holoalpha.com/mock/49/'
+VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/49/'
 ## API IDIC
-VUE_APP_API_IDIC = 'https://testdurservice.holoalpha.com/idic/'
+VUE_APP_API_IDIC = 'https://devdurservice.holoalpha.com/idic/'
 ## API Base
-VUE_APP_API_BASE = 'https://testzyyservice.holoalpha.com/'
+VUE_APP_API_BASE = 'https://devzyyservice.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 
 
 ## 站点地址
 ## 处方运营端系统地址
-VUE_APP_SITE_OPERATION = 'https://testduroc.holoalpha.com/'
+VUE_APP_SITE_OPERATION = 'https://devduroc.holoalpha.com/'
 ## 互医运营端系统地址
-VUE_APP_SITE_NETHOSPITAL = 'https://testzyy.holoalpha.com/backend'
+VUE_APP_SITE_NETHOSPITAL = 'https://devzyy.holoalpha.com/backend'
 ## 审方引擎
-VUE_APP_SITE_AUDITENGINE = 'https://testdurservice.holoalpha.com/'
+VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
 ## 处方共享管理、合理用药管理、药品供应管理地址
-VUE_APP_SITE_PRESCRIPTION = 'https://testdurhome.holoalpha.com/'
+VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.holoalpha.com/'
