feat: obs 过期， 修改 Android apk 地址

--- a/packages/repo-hybrid/.env.test
+++ b/packages/repo-hybrid/.env.test
@@ -26,4 +26,4 @@ VUE_APP_BASE_API_WECHAT = 'https://testpatient.holoalpha.com/client/'
 
 ## APP下载路径
 VUE_APP_DOWNLOAD_IOS = 'https://apps.apple.com/cn/app/万家云医/id1537044476'
-VUE_APP_DOWNLOAD_ANDROID = 'https://ehospital-prod-obs.obs.cn-east-2.myhuaweicloud.com/app/app_release.apk'
+VUE_APP_DOWNLOAD_ANDROID = 'http://zyy-ehospital-public.obs.cn-north-4.myhuaweicloud.com/app/app_release.apk'
