feat: 修改为 https 地址

--- a/packages/repo-hybrid/.env
+++ b/packages/repo-hybrid/.env
@@ -28,4 +28,4 @@ VUE_APP_BASE_API_WECHAT = 'https://devpatient.holoalpha.com/client/'
 
 ## APP下载路径
 VUE_APP_DOWNLOAD_IOS = 'https://apps.apple.com/cn/app/万家云医/id1537044476'
-VUE_APP_DOWNLOAD_ANDROID = 'http://zyy-ehospital-public.obs.cn-north-4.myhuaweicloud.com/app/app_release.apk'
+VUE_APP_DOWNLOAD_ANDROID = 'https://zyy-ehospital-public.obs.cn-north-4.myhuaweicloud.com/app/app_release.apk'
