--- a/packages/repo-prescription-center/.env
+++ b/packages/repo-prescription-center/.env
@@ -13,6 +13,6 @@ VUE_APP_RELEASE_FLODER_PATH = '/perscription-center/'
 ## API MOCK
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/513/'
 ## API BASE
-VUE_APP_API_BASE = 'https://testdurservice.holoalpha.com/institutionCenter/'
+VUE_APP_API_BASE = 'https://devdurservice.holoalpha.com/institutionCenter/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
+VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
