--- a/packages/repo-prescription-center/.env.test
+++ b/packages/repo-prescription-center/.env.test
@@ -7,7 +7,7 @@ NODE_ENV = 'production'
 
 
 ## Nginx 虚拟路径
-VUE_APP_RELEASE_FLODER_PATH = '/perscription-center/'
+VUE_APP_RELEASE_FLODER_PATH = '/prescription-center/'
 
 # API 地址
 ## API MOCK
