feat: 新处方详情UI

--- a/packages/repo-prescription-center/.env.prod
+++ b/packages/repo-prescription-center/.env.prod
@@ -13,6 +13,6 @@ VUE_APP_RELEASE_FLODER_PATH = '/prescription-center/'
 ## API MOCK
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/428/'
 ## API BASE
-VUE_APP_API_BASE = 'https://durservice.holoalpha.com/institutionCenter/'
+VUE_APP_API_BASE = 'https://api.jk.com/prescription-center/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://auth.holoalpha.com/'
