--- a/packages/repo-prescription-center/.env.test
+++ b/packages/repo-prescription-center/.env.test
@@ -13,6 +13,6 @@ VUE_APP_RELEASE_FLODER_PATH = '/prescription-center/'
 ## API MOCK
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/428/'
 ## API BASE
-VUE_APP_API_BASE = 'https://api.test.jk.com/prescription-center/'
+VUE_APP_API_BASE = 'https://admin-mall.test.jk.com/prescription-center/'
 ## API Auth
 VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
