--- a/packages/repo-pharmacist/.env
+++ b/packages/repo-pharmacist/.env
@@ -29,5 +29,9 @@ VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 ## 站点地址 
 ## 官网地址
 VUE_APP_SITE_OFFCIAL = 'https://devzyy.holoalpha.com/'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
 ## 药师端地址
 VUE_APP_SITE_PHARMACIST = 'https://devdurhome.holoalpha.com/'
+## 处方共享管理、合理用药管理、药品供应管理地址
+VUE_APP_SITE_PRESCRIPTION = 'https://devdurhome.holoalpha.com/'
