--- a/packages/repo-prescription-center/package.json
+++ b/packages/repo-prescription-center/package.json
@@ -16,7 +16,7 @@
     "peace-identity": "^1.18.0",
     "peace-library": "^1.18.0",
     "peace-ui": "^1.18.0",
-    "vue-pdf": "^4.3.0"
+    "vue-pdf": "4.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
