--- a/packages/repo-pharmacist/.env.pre
+++ b/packages/repo-pharmacist/.env.pre
@@ -23,5 +23,7 @@ VUE_APP_API_WEBSOCKET = 'wss://prezyyservice.holoalpha.com/admin/websocket'
 ## 站点地址
 ## 官网地址
 VUE_APP_SITE_OFFCIAL = 'https://prezyy.holoalpha.com/'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://predurservice.holoalpha.com/'
 ## 药师端地址
 VUE_APP_SITE_PHARMACIST = 'https://predurhome.holoalpha.com/'
