--- a/packages/repo-pharmacist/.env.dev
+++ b/packages/repo-pharmacist/.env.dev
@@ -23,5 +23,7 @@ VUE_APP_API_WEBSOCKET = 'wss://devzyyservice.holoalpha.com/admin/websocket'
 ## 站点地址
 ## 官网地址
 VUE_APP_SITE_OFFCIAL = 'https://devzyy.holoalpha.com/'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://devdurservice.holoalpha.com/'
 ## 药师端地址
 VUE_APP_SITE_PHARMACIST = 'https://devdurhome.holoalpha.com/'
