--- a/packages/repo-pharmacist/.env.prod
+++ b/packages/repo-pharmacist/.env.prod
@@ -23,5 +23,7 @@ VUE_APP_API_WEBSOCKET = 'wss://zyyservice.holoalpha.com/admin/websocket'
 ## 站点地址
 ## 官网地址
 VUE_APP_SITE_OFFCIAL = 'https://zyy.holoalpha.com/'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://durservice.holoalpha.com/'
 ## 药师端地址
 VUE_APP_SITE_PHARMACIST = 'https://durhome.holoalpha.com/'
