--- a/packages/repo-pharmacist/.env.test
+++ b/packages/repo-pharmacist/.env.test
@@ -23,5 +23,7 @@ VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
 ## 站点地址
 ## 官网地址
 VUE_APP_SITE_OFFCIAL = 'https://testzyy.holoalpha.com/'
+## 审方引擎
+VUE_APP_SITE_AUDITENGINE = 'https://testdurservice.holoalpha.com/'
 ## 药师端地址
 VUE_APP_SITE_PHARMACIST = 'https://testdurhome.holoalpha.com/'
