chore(dependencies): 规范依赖

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-hoc": "^0.4.7",
     "vue-json-editor": "^1.4.3",
     "vue-page-stack": "^1.5.0",
+    "vue-pdf": "^4.3.0",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-seamless-scroll": "^1.1.23",
