chore: 新增 test2 环境

--- a/packages/repo-auth/.env.test2
+++ b/packages/repo-auth/.env.test2
@@ -1,5 +1,5 @@
 ## NODE_ENV 
-## 当编译构建生产环境时（npm run build:test），当前环境变量生效。
+## 当编译构建生产环境时（npm run build:test2），当前环境变量生效。
 ## 配置项将继承 .env , 并覆盖相同项。
 
 
@@ -21,8 +21,8 @@ VUE_APP_AUTH_ENCRYPTION_KEY = 'sksksksksksksksk'
 ## API Mock
 VUE_APP_API_MOCK = 'https://yapi.holoalpha.com/mock/25/'
 ## API Base
-VUE_APP_API_BASE = 'https://testauth.holoalpha.com/'
+VUE_APP_API_BASE = 'https://test2auth.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
+VUE_APP_API_AUTH = 'https://test2auth.holoalpha.com/'
 ## API WebSocket
-VUE_APP_API_WEBSOCKET = 'wss://testzyyservice.holoalpha.com/admin/websocket'
+VUE_APP_API_WEBSOCKET = 'wss://test2zyyservice.holoalpha.com/admin/websocket'
