--- a/packages/repo-hybrid/.env.test2
+++ b/packages/repo-hybrid/.env.test2
@@ -1,5 +1,5 @@
 ## NODE_ENV 
-## 当编译构建生产环境时（npm run build:dev），当前环境变量生效。
+## 当编译构建生产环境时（npm run build:test2），当前环境变量生效。
 ## 配置项将继承 .env , 并覆盖相同项。
 
 
@@ -12,17 +12,17 @@ VUE_APP_RELEASE_FLODER_PATH = '/hybrid/'
 
 
 ## Server API
-VUE_APP_BASE_API = 'https://devdoctor.holoalpha.com/'
+VUE_APP_BASE_API = 'https://test2doctor.holoalpha.com/'
 ## Server API - iOS
-VUE_APP_BASE_API_IOS = 'https://devdoctor.holoalpha.com/webapp/'
+VUE_APP_BASE_API_IOS = 'https://test2doctor.holoalpha.com/webapp/'
 ## Server API - Android
-VUE_APP_BASE_API_ANDROID = 'https://devdoctor.holoalpha.com/webapp/'
+VUE_APP_BASE_API_ANDROID = 'https://test2doctor.holoalpha.com/webapp/'
 ## Server API - PC
-VUE_APP_BASE_API_PC = 'https://devdoctor.holoalpha.com/client/'
+VUE_APP_BASE_API_PC = 'https://test2doctor.holoalpha.com/client/'
 ## Server API - H5
-VUE_APP_BASE_API_H5 = 'https://devpatient.holoalpha.com/client/'
+VUE_APP_BASE_API_H5 = 'https://test2patient.holoalpha.com/client/'
 ## Server API - Wechat
-VUE_APP_BASE_API_WECHAT = 'https://devpatient.holoalpha.com/client/'
+VUE_APP_BASE_API_WECHAT = 'https://test2patient.holoalpha.com/client/'
 
 ## APP下载路径
 VUE_APP_DOWNLOAD_IOS = 'https://apps.apple.com/cn/app/万家云医/id1537044476'
