--- a/packages/repo-organization-center/.env.dev
+++ b/packages/repo-organization-center/.env.dev
@@ -1,5 +1,6 @@
-## NODE_ENV
-## 当开发环境时（npm run serve），当前环境变量生效。
+## NODE_ENV 
+## 当编译构建生产环境时（npm run build:dev），当前环境变量生效。
+## 配置项将继承 .env , 并覆盖相同项。
 
 
 ## 编译模式
