--- a/packages/repo-doctor/.env.test
+++ b/packages/repo-doctor/.env.test
@@ -1,5 +1,5 @@
 ## NODE_ENV 
-## 当编译构建测试环境时（npm run build:test），当前环境变量生效。
+## 当编译构建生产环境时（npm run build:test），当前环境变量生效。
 ## 配置项将继承 .env , 并覆盖相同项。
 
 
