--- a/packages/repo-doctor/package.json
+++ b/packages/repo-doctor/package.json
@@ -9,6 +9,7 @@
     "build:pre": "vue-cli-service build --mode pre",
     "build:prod": "vue-cli-service build --mode prod",
     "build:test": "vue-cli-service build --mode test",
+    "build:test2": "vue-cli-service build --mode test2",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
