--- a/packages/repo-patient/.env.test2
+++ b/packages/repo-patient/.env.test2
@@ -1,5 +1,5 @@
 ## NODE_ENV 
-## 当编译构建生产环境时（npm run build:test），当前环境变量生效。
+## 当编译构建生产环境时（npm run build:test2），当前环境变量生效。
 ## 配置项将继承 .env , 并覆盖相同项。
 NODE_ENV = 'production'
 
@@ -7,16 +7,16 @@ NODE_ENV = 'production'
 VUE_APP_RELEASE_FLODER_PATH = '/patient/'
 
 ## BASE API
-VUE_APP_BASE_API = 'https://testpatient.holoalpha.com/'
+VUE_APP_BASE_API = 'https://test2patient.holoalpha.com/'
 
 ## IM KEY
-VUE_APP_IM_KEY = '75d1429294533d5a7148fb6c6b5a7543'
+VUE_APP_IM_KEY = 'a3e2005e62fae9a702dcd7200f15c15d'
 
 ## 神策埋点 server_url
 VUE_APP_SA_SERVER_URL = 'https://track.test.jk.com/sa.gif?project=zyy_test&remark=cktest'
 
 ## H5访问链接
-VUE_APP_BASE_URL = 'https://testzyy.holoalpha.com/'
+VUE_APP_BASE_URL = 'https://test2zyy.holoalpha.com/'
 
 ## 外链配置
-VUE_APP_IFRAME_BASE_URL='https://testzyy.holoalpha.com/hybrid/'
+VUE_APP_IFRAME_BASE_URL='https://test2zyy.holoalpha.com/hybrid/'
