--- a/packages/repo-prescription-center/.env.test2
+++ b/packages/repo-prescription-center/.env.test2
@@ -1,5 +1,5 @@
 ## NODE_ENV 
-## 当编译构建生产环境时（npm run build:test），当前环境变量生效。
+## 当编译构建生产环境时（npm run build:test2），当前环境变量生效。
 ## 配置项将继承 .env , 并覆盖相同项。
 
 
@@ -14,6 +14,6 @@ VUE_APP_RELEASE_FLODER_PATH = '/prescription-center/'
 ## API MOCK
 VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/428/'
 ## API BASE
-VUE_APP_API_BASE = 'https://admin-mall.test.jk.com/api/prescription-center/'
+VUE_APP_API_BASE = 'https://admin-mall.test2.jk.com/api/prescription-center/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
+VUE_APP_API_AUTH = 'https://test2auth.holoalpha.com/'
