feat: 医生端默认话术修改

--- a/packages/repo-doctor/.env
+++ b/packages/repo-doctor/.env
@@ -12,15 +12,15 @@ VUE_APP_RELEASE_FLODER_PATH = '/'
 
 ## API 地址
 ## API Mock
-VUE_APP_API_MOCK = 'http://devyapi.holoalpha.com/mock/11/'
+VUE_APP_API_MOCK = 'http://testyapi.holoalpha.com/mock/11/'
 ## API Base
-VUE_APP_API_BASE = 'https://devdoctor.holoalpha.com/'
+VUE_APP_API_BASE = 'https://testdoctor.holoalpha.com/'
 ## API CONVERGE
-VUE_APP_API_CONVERGE = 'https://devzyyehospital.holoalpha.com/'
+VUE_APP_API_CONVERGE = 'https://testzyyehospital.holoalpha.com/'
 ## API Auth
-VUE_APP_API_AUTH = 'https://devauth.holoalpha.com/'
+VUE_APP_API_AUTH = 'https://testauth.holoalpha.com/'
 ## API Hybrid
-VUE_APP_API_HYBRID = 'https://devweb.holoalpha.com/'
+VUE_APP_API_HYBRID = 'https://testweb.holoalpha.com/'
 
 ## IM KEY
-VUE_APP_IM_KEY = 'f84e68e2f9357fa8398fedd07b6fa431'
+VUE_APP_IM_KEY = '75d1429294533d5a7148fb6c6b5a7543'
