--- a/packages/repo-organization-center/.env
+++ b/packages/repo-organization-center/.env
@@ -11,7 +11,7 @@ VUE_APP_RELEASE_FLODER_PATH = '/organization-center/'
 
 # API 地址
 ## API MOCK
-VUE_APP_API_MOCK = 'https://devyapi.holoalpha.com/mock/428/'
+VUE_APP_API_MOCK = 'https://testyapi.holoalpha.com/mock/428/'
 ## API BASE
 VUE_APP_API_BASE = 'https://testdurservice.holoalpha.com/institutionCenter/'
 ## API Auth
